final tit bit changes

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ h2 {
 
 html, body {
   margin: 0;
+  height: 110vh;
 }
 
 * {
@@ -22,7 +23,7 @@ html, body {
   background: linear-gradient(to left, #00273a, #334956);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: #FFF;
-  height: 50px;
+  height: 60px;
   padding: 1em;
 }
 
